@@ -2,6 +2,7 @@
 v4.2.15-git
 -----------
 
+[jan] SECURITY: Fix open redirects.
 [mjr] Fix handling of delayed start dates (Bug #14634).
 
 
